Bug 80328 - Autocaption with misguiding entries
Summary: Autocaption with misguiding entries
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: target:4.4.0 target:4.3.5
Keywords: regression
: 73622 (view as bug list)
Depends on:
Blocks: AutoCaption
  Show dependency treegraph
 
Reported: 2014-06-21 13:12 UTC by Olivier Hallot
Modified: 2017-07-04 20:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Image of the several OLE entries in AutoCaption configuration (48.01 KB, image/png)
2014-06-21 13:12 UTC, Olivier Hallot
Details
many ole object entries in autocaption dialog, same problem in german client (109.38 KB, image/jpeg)
2014-06-21 13:23 UTC, riesslibo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2014-06-21 13:12:35 UTC
Created attachment 101482 [details]
Image of the several OLE entries in AutoCaption configuration

The Autocaption entries has several, repeated entries named "OLE object".

You can see it in Tools - Options - LibreOffice Writer - AutoCaption.

See the image attached.

Is confuses users and repetition seems to be useless (Always refers to Image).
Comment 1 Riccardo Vianello 2014-06-21 13:19:48 UTC
I confirmed this issues for 4.3.0 RC1 there are more OLE entries in AutoCaption Configuration.

WIndows 8 Pro
Comment 2 riesslibo 2014-06-21 13:21:34 UTC
I can comfirm this issue, even for Version 4.2.5 with Win7/64 with German client,
see attachment autocaptionOLETYPES.jpg
Comment 3 riesslibo 2014-06-21 13:23:25 UTC
Created attachment 101483 [details]
many ole object entries in autocaption dialog, same problem in german client
Comment 4 Cor Nouws 2014-07-05 22:24:14 UTC
(searching for duplicates advised)
Comment 5 Robert Großkopf 2014-07-12 18:31:40 UTC
(In reply to comment #0)

Why do you report the same issue two times: https://bugs.freedesktop.org/show_bug.cgi?id=73622
I will set the first as duplicate of this - more comments in this report.
Comment 6 Robert Großkopf 2014-07-12 18:32:21 UTC
*** Bug 73622 has been marked as a duplicate of this bug. ***
Comment 7 Michael Stahl (allotropia) 2014-11-12 16:27:46 UTC
these should be "Spreadsheet", "Chart" etc.

regression from:

commit af2d474ff9a91645043c1d4292891c313cceef5e
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Wed Aug 7 14:34:05 2013 +0200

    sw: convert SwCaptionOptPage to OUString
    

fixed on master.
Comment 8 Commit Notification 2014-11-12 16:28:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e3c823f591365c94b22932f08f0884d372e083e

fdo#80328: sw: fix inverted conditional in AutoCaption dialog

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2015-02-19 13:53:36 UTC
*** Bug 73622 has been marked as a duplicate of this bug. ***