fdo#80328: sw: fix inverted conditional in AutoCaption dialog

(regression from af2d474ff9a91645043c1d4292891c313cceef5e)

Change-Id: Ib22be881c82024e545752715bb9eeb2851a64f88
(cherry picked from commit 6e3c823f591365c94b22932f08f0884d372e083e)
Reviewed-on: https://gerrit.libreoffice.org/12389
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>